--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ android {
         }
     }
 
+    packagingOptions {
+        exclude 'META_INF/LICENSE'
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -33,13 +37,12 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.android.support:support-v4:25.3.0'
-    testCompile 'junit:junit:4.12'
-
-    compile 'io.jsonwebtoken:jjwt:0.7.0'
     compile 'com.auth0.android:jwtdecode:1.1.1'
+    testCompile 'junit:junit:4.12'
 }
